# agentllm

./: .env.example  .env.secrets.template  .env.shared  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml  custom_handler.py  main.py  noxfile.py  proxy_config.yaml  pyproject.toml  sidekick
.claude/: README.md
.claude/commands/: catchup.md  commit.md  implement.md  plan.md
docs/: knowledge-management.md  rhai_roadmap_evaluation_guide.md
docs/agents/: release_manager.md  rhdh_support.md
docs/plans/: rhai-roadmap-publisher-accuracy-evals-implementation.md  rhai-roadmap-publisher-accuracy-evals.md
docs/templates/: rhdh_support_system_prompt.md
examples/: README.md  rhai_releases_example.py  token_storage_example.py
examples/knowledge/: acmeviz_company.md  quantumflux_api.md  zorbonian_recipes.md
scripts/: generate_synthetic_jira_data.py  quick_register.sh  register_provider.md
src/agentllm/: custom_handler.py  logging_config.py  proxy_config.yaml
src/agentllm/agents/: demo_agent.py  demo_agent_configurator.py  examples.py  github_pr_prioritization_agent.py  github_pr_prioritization_agent_configurator.py  release_manager.py  release_manager_configurator.py  rhai_roadmap_publisher.py  rhdh_support.py  rhdh_support_configurator.py
src/agentllm/agents/base/: configurator.py  wrapper.py
src/agentllm/agents/toolkit_configs/: __init__.py  base.py  favorite_color_config.py  gdrive_config.py  github_config.py  jira_config.py  rhcp_config.py  system_prompt_extension_config.py  web_config.py
src/agentllm/db/: README.md  __init__.py  token_storage.py
src/agentllm/knowledge/: __init__.py  factory.py  manager.py
src/agentllm/tools/: __init__.py  color_toolkit.py  gdrive_toolkit.py  gdrive_utils.py  github_toolkit.py  jira_toolkit.py  rhai_toolkit.py  rhcp_toolkit.py  web_toolkit.py
tests/: __init__.py  test_custom_handler.py  test_github_pr_prioritization_agent.py  test_knowledge_manager.py  test_proxy_integration.py  test_release_manager.py  test_rhai_roadmap_accuracy.py  test_rhai_toolkit.py  test_synthetic_data_fixtures.py
tests/demo_agent/: README.md  conftest.py  test_demo_agent.py
tests/fixtures/: __init__.py  releases.csv  rhai_jira_synthetic_data.py
