[project]
name = "agentllm"
version = "0.1.0"
description = "Custom LiteLLM provider for Agno agents - OpenAI-compatible API for Agno"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.8",
    "litellm[proxy]>=1.79.1",
    "nox>=2025.10.16",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
