[project]
dependencies = [
  "agno>=2.2.10",
  "jira>=3.0.0",
  "litellm[proxy]>=1.79.1",
  "loguru>=0.7.0",
  "sqlalchemy>=2.0.0",
  "google-genai>=0.2.0",
  "google-auth-oauthlib>=1.0.0",
  "google-api-python-client>=2.0.0",
  "html-to-markdown>=1.0.0",
  "anthropic>=0.72.1",
  "rich>=13.7.1",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "lancedb>=0.17.0",
  "tantivy>=0.22.0",
  "pypdf>=5.1.0",
  "pandas>=2.0.0",
]
description = "Custom LiteLLM provider for Agno agents - OpenAI-compatible API for Agno"
name = "agentllm"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
version = "0.1.0"

[project.entry-points."agentllm.agents"]
# Agent plugin entry points - factories are auto-discovered by AgentRegistry
demo-agent = "agentllm.agents.demo_agent:DemoAgentFactory"
release-manager = "agentllm.agents.release_manager:ReleaseManagerFactory"
rhai-roadmap-publisher = "agentllm.agents.rhai_roadmap_publisher:RHAIRoadmapPublisherFactory"
github-pr-prioritization = "agentllm.agents.github_pr_prioritization_agent:GitHubReviewAgentFactory"
sprint-reviewer = "agentllm.agents.sprint_reviewer:SprintReviewerFactory"
rhdh-support = "agentllm.agents.rhdh_support:RHDHSupportFactory"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "eval: marks tests as accuracy evaluation tests (may be slow, deselect with '-m \"not eval\"')",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "E501", # line too long (handled by formatter)
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[dependency-groups]
dev = [
  "ruff>=0.14.3",
  "nox>=2025.10.16",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "faker>=33.1.0",
]
